@@ -1,3 +1,12 @@
+2008-03-21 Martin Schaaf <mascha@ma-scha.de>
+
+	* src/DrawingThought.py
+	* src/MainWindow.py
+	* src/utils.py
+	* src/ImageThought.py
+	* src/TextThought.py
+	o add svg export (patch by Matthias Vogelgesang)
+
 2008-03-21  Don Scorgie  <Don@Scorgie.org>
 
 	* src/TextThought.py: 
